Additional fixes for IE scrollbars issues
Related to #9004, #9552, #9572, #9578

--- a/WebContent/VAADIN/themes/base/layout/layout.scss
+++ b/WebContent/VAADIN/themes/base/layout/layout.scss
@@ -34,7 +34,8 @@ TODO
 	padding-top: 24px;
 }
 .v-gridlayout,
-.v-verticallayout {
+.v-verticallayout,
+.v-horizontallayout {
 	font-size: 0;
 }
 
